<resources>
    <string name="app_name">SeaBattle</string>
    <string name="input_name">Name: </string>
    <string name="input_username">New username: </string>
    <string name="buttonAdd_value">Add</string>

    <string name="create_profile">Create new profil</string>
    <string name="edit_profile">Edit profil</string>
    <string name="delete_profile">Delete profil</string>
    <string name="buttonEdit">Edit</string>
    <string name="buttonDelete">Delete</string>
    <string name="buttonReset">Reset</string>
    <string name="buttonCancel">Cancel</string>

    <string name="buttonPlay">Play</string>
    <string name="buttonProfile">Profile</string>
    <string name="buttonSettings">Settings</string>
    <string name="pseudo">Username :</string>
    <string name="nbWin">Won games :</string>
    <string name="diff">Difficulty :</string>
    <string name="ratio">Ratio :</string>
    <string name="music">Music : </string>
    <string name="sound">Sound Effects : </string>
    <string name="animation">Animation</string>

    <string name="enemyShipLeft">Enemy\'s ships sunk :</string>
    <string name="myShipLeft">Your ships sunk :</string>
    <string name="rotateShip">Rotate ships</string>
    <string name="placementTitle">Place your ship</string>
    <string name="randomPlacement">Random placement</string>
    <string name="play">Play</string>
    <string name="enemyBattleField">ENEMY BATTLEFIELD</string>
    <string name="myFleet">MY FLEET</string>
</resources>
