<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".75"
        android:layout_height="0dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".10"
                android:gravity="center"
                android:text="@string/enemyBattleField"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".90"
                android:layout_gravity="center"
                android:id="@+id/enemyGrid">

            </TableLayout>

        </LinearLayout>

        <View
            android:layout_width="1dip"
            android:layout_height="fill_parent"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".50"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".10"
                android:gravity="center"
                android:text="@string/myFleet"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight=".90"
                android:layout_gravity="center"
                android:id="@+id/myGrid">

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".25"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/subBarPlacement">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".20"
            android:textSize="25dp"
            android:gravity="top|center"
            android:text="@string/placementTitle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".80"
            android:gravity="center"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="0dp"
                android:layout_weight=".75"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/shipContainer">

            </TableLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight=".25"
                android:layout_height="match_parent"
                android:gravity="left">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="match_parent"
                    android:onClick="randomPlacementOnPlayerBattlefield"
                    android:text="@string/randomPlacement"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_weight=".50"
                    android:layout_height="match_parent"
                    android:id="@+id/buttonPlay"
                    android:onClick="activeGame"
                    android:text="@string/play"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>