<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp">

        <TextView
            android:text="Pseudo :"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/pseudo" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:id="@+id/fieldPseudo"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="50dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonEdit"
            android:textColor="#FF8C00"
            android:background="#000000"
            android:layout_marginRight="50dp"
            android:text="@string/buttonEdit" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDelete"
            android:textColor="#FF8C00"
            android:background="#000000"
            android:text="@string/buttonDelete" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:text="Nb. Win :"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/nbwin" />

        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:id="@+id/fieldNbwin"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp">

        <TextView
            android:text="Ratio :"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/ratio" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:layout_marginLeft="20dp"
            android:gravity="center_horizontal"
            android:id="@+id/fieldRatio"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonReset"
            android:textColor="#FF8C00"
            android:background="#000000"
            android:text="@string/buttonReset" />
    </LinearLayout>

</LinearLayout>